# app/Http/Controllers/Controller.php
@@ -16,6 +16,15 @@ use Illuminate\Routing\Controller as BaseController;
  *      )
  * ),
  * 
+ * @OA\SecurityScheme(
+ *      securityScheme="bearerAuth",
+ *      in="header",
+ *      name="bearerAuth",
+ *      type="http",
+ *      scheme="bearer",
+ *      bearerFormat="JWT",
+ * ),
+ * 
  * @OA\Server(
  *      url="http://localhost:8000"
  * ),
